[metadata]
name = flask_utils
version = 1.0.72
author = atelier des chefs
author_email = dev@atelierdeschefs.com
description = Some flask utils
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/L-atelier-des-Chefs/flask-utils.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[flake8]
exclude = */__init__.py
ignore = E203,W503
max-line-length = 99
show-source = true
